# Copyright (C) by MinghaoHe - minghaohe@tencent.com
# This code is licensed under the MIT license (MIT) (http://opensource.org/licenses/MIT)

CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_C_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
SET(PROJECT_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
SET(SOURCE_ROOT_DIR "${PROJECT_ROOT_DIR}/src")
SET(RESOURCE_ROOT_DIR "${PROJECT_ROOT_DIR}/res")
SET(THIRD_PARTY_DIR "${PROJECT_ROOT_DIR}/3rdparty")
SET(PROJECT ATNEngine)

PROJECT(${PROJECT})

ADD_SUBDIRECTORY(${SOURCE_ROOT_DIR})
ADD_SUBDIRECTORY(${THIRD_PARTY_DIR})
